--- a/helpers.html
+++ b/helpers.html
@@ -6,6 +6,7 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <link rel="stylesheet" media="all" href="public/stylesheets/normalize.css" />
   <link rel="stylesheet" media="all" href="docco.css" />
+  <script async type="text/javascript" src="//stats.matpie.com/?js"></script>
 </head>
 <body>
   <div class="container">
